@@ -133,7 +133,7 @@ int main( int argc, char *argv[] ){
 	}
 
 	if( do_action == UPDATE ){
-		pkg_action_update(global_config);
+		update_pkg_cache(global_config);
 	}else if( do_action == INSTALL ){
 		if (optind < argc) {
 			int i;
