@@ -1433,3 +1433,97 @@ pkg_info_t *get_pkg_by_details(struct pkg_list *list,char *name,char *version,ch
 	return NULL;
 }
 
+/* update package data from mirror url */
+void update_pkg_cache(const rc_config *global_config){
+	int i;
+	FILE *pkg_list_fh;
+	FILE *patches_list_fh;
+	FILE *checksum_list_fh;
+	FILE *tmp_file;
+	struct pkg_list *available_pkgs = NULL;
+
+	/* download our PKG_LIST */
+	pkg_list_fh = open_file(PKG_LIST_L,"w+");
+	for(i = 0; i < global_config->sources.count; i++){
+		tmp_file = tmpfile();
+		#if USE_CURL_PROGRESS == 0
+		printf(_("Retrieving package data [%s]..."),global_config->sources.url[i]);
+		#else
+		printf(_("Retrieving package data [%s]...\n"),global_config->sources.url[i]);
+		#endif
+		if( get_mirror_data_from_source(tmp_file,global_config->sources.url[i],PKG_LIST) == 0 ){
+			rewind(tmp_file); /* make sure we are back at the front of the file */
+			available_pkgs = parse_packages_txt(tmp_file);
+			write_pkg_data(global_config->sources.url[i],pkg_list_fh,available_pkgs);
+			free_pkg_list(available_pkgs);
+			#if USE_CURL_PROGRESS == 0
+			printf(_("Done\n"));
+			#endif
+		}
+		fclose(tmp_file);
+	}
+
+	/* download EXTRAS_LIST */
+#if GRAB_EXTRAS == 1
+	for(i = 0; i < global_config->sources.count; i++){
+		tmp_file = tmpfile();
+		#if USE_CURL_PROGRESS == 0
+		printf(_("Retrieving extras list [%s]..."),global_config->sources.url[i]);
+		#else
+		printf(_("Retrieving extras list [%s]...\n"),global_config->sources.url[i]);
+		#endif
+		if( get_mirror_data_from_source(tmp_file,global_config->sources.url[i],EXTRAS_LIST) == 0 ){
+			rewind(tmp_file); /* make sure we are back at the front of the file */
+			available_pkgs = parse_packages_txt(tmp_file);
+			write_pkg_data(global_config->sources.url[i],pkg_list_fh,available_pkgs);
+			free_pkg_list(available_pkgs);
+			#if USE_CURL_PROGRESS == 0
+			printf(_("Done\n"));
+			#endif
+		}
+		fclose(tmp_file);
+	}
+#endif
+
+	/* download PATCHES_LIST */
+	for(i = 0; i < global_config->sources.count; i++){
+		patches_list_fh = tmpfile();
+		#if USE_CURL_PROGRESS == 0
+		printf(_("Retrieving patch list [%s]..."),global_config->sources.url[i]);
+		#else
+		printf(_("Retrieving patch list [%s]...\n"),global_config->sources.url[i]);
+		#endif
+		if( get_mirror_data_from_source(patches_list_fh,global_config->sources.url[i],PATCHES_LIST) == 0 ){
+			rewind(patches_list_fh); /* make sure we are back at the front of the file */
+			available_pkgs = parse_packages_txt(patches_list_fh);
+			write_pkg_data(global_config->sources.url[i],pkg_list_fh,available_pkgs);
+			free_pkg_list(available_pkgs);
+			#if USE_CURL_PROGRESS == 0
+			printf(_("Done\n"));
+			#endif
+		}
+		fclose(patches_list_fh);
+	}
+	fclose(pkg_list_fh);
+
+	/* download checksum file */
+	checksum_list_fh = open_file(CHECKSUM_FILE,"w+");
+	for(i = 0; i < global_config->sources.count; i++){
+		#if USE_CURL_PROGRESS == 0
+		printf(_("Retrieving checksum list [%s]..."),global_config->sources.url[i]);
+		#else
+		printf(_("Retrieving checksum list [%s]...\n"),global_config->sources.url[i]);
+		#endif
+		if( get_mirror_data_from_source(checksum_list_fh,global_config->sources.url[i],CHECKSUM_FILE) == 0 ){
+			#if USE_CURL_PROGRESS == 0
+			printf(_("Done\n"));
+			#endif
+		}
+	}
+	fclose(checksum_list_fh);
+
+	/* source listing to go here */
+
+	return;
+}
+
